Fix z-index on blockquote

--- a/source/stylesheets/dj-premier-asap-ferg-our-streets.css.scss
+++ b/source/stylesheets/dj-premier-asap-ferg-our-streets.css.scss
@@ -133,8 +133,10 @@ blockquote {
   display: grid;
   grid-column-gap: 2rem;
   grid-template-columns: 1fr 1fr;
+  position: relative;
   text-align: justify;
   text-justify: auto;
+  z-index: 10;
 
   @media screen and (max-width: 500px) {
     display: block;
